--- a/script/empirical_study/diverse/transformer/one2seq-transformer-presabs-kp20k-E6D6.yml
+++ b/script/empirical_study/diverse/transformer/one2seq-transformer-presabs-kp20k-E6D6.yml
@@ -2,9 +2,9 @@
 
 ### Exp meta
 exp: transformer-presabs-kp20k-E6D6
-exp_dir: /zfs1/pbrusilovsky/rum20/kp/diverse_exps/transformer-presabs-kp20k-E6D6
-save_model: /zfs1/pbrusilovsky/rum20/kp/diverse_exps/transformer-presabs-kp20k-E6D6/ckpts/checkpoint
-log_file: /zfs1/pbrusilovsky/rum20/kp/diverse_exps/transformer-presabs-kp20k-E6D6/log.txt
+exp_dir: /usr/src/app/output/kp/diverse_exps/transformer-presabs-kp20k-E6D6
+save_model: /usr/src/app/output/kp/diverse_exps/transformer-presabs-kp20k-E6D6/ckpts/checkpoint
+log_file: /usr/src/app/output/kp/diverse_exps/transformer-presabs-kp20k-E6D6/log.txt
 wandb_project: transfer_kp
 
 ### KP parameters
@@ -27,7 +27,7 @@ tgt_seq_length_trunc: 128
 shuffle_shards: false
 data:
     corpus_1:
-        path_src: /zfs1/hdaqing/rum20/kp/data/kp/json/kp20k/train.json
+        path_src: /usr/src/app/data/keyphrase/json/kp20k/kp20k_train.json
         type: keyphrase
         transforms: [keyphrase, onmt_tokenize]
 #        transforms: [keyphrase, roberta_tokenize_kpg]
@@ -39,7 +39,7 @@ max_target_phrases: 8
 
 share_vocab: True
 #### Word and vocab
-src_vocab: /zfs1/pbrusilovsky/rum20/kp/OpenNMT-kpg/data/keyphrase/meng17/magkp20k.vocab.json
+src_vocab: /usr/src/app/data/keyphrase/meng17/magkp20k.vocab.json
 src_vocab_size: 50000
 lowercase: True
 return_tokens: True
@@ -119,8 +119,8 @@ wandb_key: 'c338136c195ab221b8c7cfaa446db16b2e86c6db'
 
 
 world_size: 1
-gpu_ranks:
-- 0
+#gpu_ranks:
+#- 0
 #- 1
 #- 2
 #master_port: 10000
